# kayak-calc

./: DOCUMENTATION_QUICKSTART.md  GLOSSARY.md  INPUT_DATA_FORMATS.md  Makefile  OUTPUT_DATA_FORMATS.md  QUICKREF.md  README.md  TASKS.md  USER_GUIDE.md  audit_docstrings.py  fix_examples.py  fix_lint.py  pyproject.toml  requirements.txt  verify_docs.sh
.github/: copilot-instructions.md
data/: README.md  sample_hull_kayak.json  sample_hull_multipoint_bow_stern.json  sample_hull_simple.csv  sample_hull_simple.json
docs/: PHASE3_TASK3.1_SUMMARY.md  PHASE4_TASK4.1_PLAN.md  PHASE4_TASK4.1_SUMMARY.md  PHASE4_TASK4.2_SUMMARY.md  PHASE4_TASK4.3_SUMMARY.md  PHASE4_TASK4.4_SUMMARY.md  PHASE5_TASK5.1_PLAN.md  PHASE5_TASK5.1_SUMMARY.md  PHASE5_TASK5.2_SUMMARY.md  PHASE5_TASK5.3_SUMMARY.md  PHASE6_TASK6.1_PLAN.md  PHASE6_TASK6.1_SUMMARY.md  PHASE6_TASK6.2_PLAN.md  PHASE6_TASK6.2_SUMMARY.md  PHASE6_TASK6.3_PLAN.md  PHASE6_TASK6.3_SUMMARY.md  PHASE7_TASK7.1_PLAN.md  PHASE7_TASK7.1_SUMMARY.md  PHASE7_TASK7.2_PLAN.md  PHASE7_TASK7.2_SUMMARY.md  PHASE8_TASK8.1_PLAN.md  PHASE8_TASK8.1_SUMMARY.md  PHASE8_TASK8.2_PLAN.md  PHASE8_TASK8.2_SUMMARY.md  PHASE8_TASK8.3_PLAN.md  PHASE8_TASK8.3_SUMMARY.md  PHASE9_TASK9.1_PLAN.md  PHASE9_TASK9.1_SUMMARY.md  PHASE9_TASK9.2_PLAN.md  PHASE9_TASK9.2_SUMMARY.md  PHASE9_TASK9.3_PLAN.md  PHASE9_TASK9.3_SUMMARY.md  PHASE9_TASK9.5_PLAN.md  PHASE9_TASK9.5_SUMMARY.md  PHASE9_TASK9.6_PLAN.md  PHASE9_TASK9.6_SUMMARY.md  PHASE9_TASK9.7_PLAN.md  PHASE9_TASK9.7_SUMMARY.md  README.md  conf.py  (+6 more)
examples/: README.md  advanced_visualization_workflow.py  basic_displacement_workflow.py  center_of_buoyancy_examples.py  center_of_gravity_examples.py  complete_stability_analysis.py  create_multipoint_bow_stern_example.py  cross_section_examples.py  data_input_examples.py  data_output_examples.py  interactive_visualization_examples.py  interpolation_examples.py  parametric_study_workflow.py  volume_examples.py  (+7 more)
(+70 files in other folders)
